Clear, delete support. Free-tier limits.